<resources>
    <string name="app_name">FilmGallery</string>
    <string name="label_default">Serial</string>
    <string name="rating_default">4.0</string>
    <string name="film_name_default">African Queens: Njinga</string>
    <string name="poster_description">poster_image_url</string>
    <string name="main_fragment_header">Popular Serials and Films</string>
    <string name="loading">Loading…</string>
    <string name="error_default">Error! Try again</string>
    <string name="btn_label_default">Try again</string>
    <string name="search">Search films and serials</string>
    <string name="serial_header_default">Serials:</string>
    <string name="films_header_default">Films:</string>
    <string name="welcome_to_app">Welcome to FilmGallery</string>
    <string name="username_hint">Username</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="no_account">No account? </string>
    <string name="register">Register!</string>
    <string name="registration_on">Registration on FilmGallery!</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_photo">Choose photo</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter username</string>
    <string name="enter_description">Enter last name</string>
    <string name="enter_nickname">Enter first name</string>
    <string name="username_default">Creator Username\n(Yuriy Gagarin)</string>
    <string name="favourites">Favourites:</string>
    <string name="empty_fields">Please, fill all fields to continue</string>
    <string name="no_such_user">There is no such user. Please check the correctness of the data and try again</string>
    <string name="photo_selected">You selected photo</string>
    <string name="register_error">Error during registration. Try again</string>
    <string name="register_success">User registered successfully</string>
    <string name="film_added_notification">Film added to Favorites</string>
    <string name="film_removed_notification">Film removed from Favorites</string>
    <string name="genre_list_default">Drama, Comedy, Thriller</string>
    <string name="date_of_creation_default">2023–01–24</string>
    <string name="no_genres">No genres</string>
    <string name="actors">Actors</string>
    <string name="runtime_default">Runtime: 00:30:00</string>
    <string name="description_default">Cast and crew speak on adapting One Shot…</string>
    <string name="empty_actors">No actors</string>
    <string name="denied_permission_notification">You have banned photo selection</string>
    <string name="dont_same_passwords">Passwords do not match</string>
    <string name="image_url">https://image.tmdb.org/t/p/w500%1$s</string>
    <string name="runtime_value">Runtime: %1$s minutes</string>
    <string name="profile_data">%1$s\n(%2$s %3$s)</string>
    <string name="description_for_back_button">back_from_screen</string>
    <string name="description_for_backdrop_image">backdrop_image</string>
    <string name="description_for_favorite_button">favorite_button</string>
    <string name="description_for_poster_image">poster_image</string>
    <string name="description_for_error_image">error_image</string>
    <string name="description_for_sign_out_button">sign_out</string>
    <string name="empty_list_of_favorites_default">Add movies and TV shows to your favorites to see them in your profile</string>
    <string name="home">Home</string>
    <string name="search_value">Search</string>
    <string name="profile">Profile</string>
</resources>
