<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.features.details.fragment.SerialDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/description_for_backdrop_image"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="12dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorOnPrimary"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/description_for_back_button"/>

            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginEnd="12dp"
                android:background="?android:selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/description_for_favorite_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="220dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_backdrop">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_poster"
                        android:layout_width="128dp"
                        android:layout_height="208dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/description_for_poster_image"/>

                    <TextView
                        android:id="@+id/tv_film_name"
                        style="@style/HeaderTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/film_name_default"
                        app:layout_constraintBottom_toTopOf="@+id/tv_film_date_of_creation"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_poster"
                        app:layout_constraintTop_toTopOf="@+id/iv_poster"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/tv_film_date_of_creation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_creation_default"
                        app:layout_constraintBottom_toTopOf="@+id/tv_film_runtime"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_poster"
                        app:layout_constraintTop_toBottomOf="@+id/tv_film_name" />

                    <TextView
                        android:id="@+id/tv_film_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime_default"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_poster"
                        app:layout_constraintTop_toBottomOf="@+id/tv_film_date_of_creation" />

                    <TextView
                        android:id="@+id/tv_genres"
                        style="@style/DescriptionTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/genre_list_default"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_poster"/>

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?attr/colorPrimary"
                        android:layout_marginVertical="8dp"
                        android:layout_marginHorizontal="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

                    <TextView
                        android:id="@+id/tv_actors"
                        style="@style/HeaderTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="@string/actors"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider"/>

                    <ProgressBar
                        android:id="@+id/pb_loading_actors"
                        style="@style/ProgressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_actors"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_actors" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_actors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tv_actors"
                        android:layout_marginHorizontal="24dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"
                        tools:listitem="@layout/view_actor"
                        android:layout_marginTop="12dp"/>

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?attr/colorPrimary"
                        android:layout_marginVertical="8dp"
                        android:layout_marginHorizontal="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/rv_actors" />

                    <TextView
                        android:id="@+id/tv_film_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/description_default"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginTop="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider2" />



                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/pb_loading"
            style="@style/ProgressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tv_loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pb_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_error"
            style="@style/ProgressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/error"
            app:layout_constraintBottom_toTopOf="@+id/tv_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/description_for_error_image"/>

        <TextView
            android:id="@+id/tv_error"
            style="@style/DescriptionTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_default"
            app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_error" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/btn_label_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
