<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview_element"
    android:layout_width="128dp"
    android:layout_height="218dp"
    style="@style/AppCardViewStyle"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cardCornerRadius="16dp">

                <TextView
                    android:id="@+id/tv_label"
                    style="@style/DetailsTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_default"
                    android:background="@color/purple_500"/>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/poster_description" />

            <TextView
                android:id="@+id/tv_rating"
                style="@style/DetailsTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster"
                android:background="@color/purple_500"
                android:text="@string/rating_default"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating"
                android:text="@string/film_name_default"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
