<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.features.profile.fragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_search">

        <ProgressBar
            android:id="@+id/pb_loading"
            style="@style/ProgressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tv_loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pb_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/exit"
                android:backgroundTint="?attr/colorOnPrimary"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/description_for_sign_out_button"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_creator_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/tarantino"
                app:civ_border_color="?attr/colorOnSecondary"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_username"
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_default"
                app:layout_constraintTop_toBottomOf="@+id/iv_creator_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/layout_films"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username">

                <TextView
                    android:id="@+id/tv_favorites"
                    style="@style/HeaderTextStyle"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/favourites" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_films"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/view_base_element"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_serials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/view_base_element"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_empty_favorites"
                style="@style/DescriptionTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/empty_list_of_favorites_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>
